Better when_all + it handles void futures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ endif()
 #                              taskloaf library
 ################################################################################
 
-set(TASKLOAF_SRC "src/taskloaf/future.cpp;src/taskloaf/ivar.cpp;src/taskloaf/worker.cpp;src/taskloaf/task_collection.cpp;src/taskloaf/ivar_tracker.cpp;src/taskloaf/id.cpp;src/taskloaf/ring.cpp;src/taskloaf/ref_counting.cpp;src/taskloaf/local_comm.cpp;src/taskloaf/serializing_comm.cpp;src/taskloaf/comm.cpp;src/taskloaf/launcher.cpp;src/taskloaf/mpi_comm.cpp;src/taskloaf/tlassert.cpp;src/taskloaf/fnc.cpp;src/taskloaf/data.cpp")
+set(TASKLOAF_SRC "src/taskloaf/ivar.cpp;src/taskloaf/worker.cpp;src/taskloaf/task_collection.cpp;src/taskloaf/ivar_tracker.cpp;src/taskloaf/id.cpp;src/taskloaf/ring.cpp;src/taskloaf/ref_counting.cpp;src/taskloaf/local_comm.cpp;src/taskloaf/serializing_comm.cpp;src/taskloaf/comm.cpp;src/taskloaf/launcher.cpp;src/taskloaf/mpi_comm.cpp;src/taskloaf/tlassert.cpp;src/taskloaf/fnc.cpp;src/taskloaf/data.cpp")
 if (BUILD_LIBRARY)
     add_library(taskloaf SHARED ${TASKLOAF_SRC})
 
@@ -99,7 +99,7 @@ endmacro()
 
 if(BUILD_TESTS)
     taskloaf_tests(run_tests
-        "tests/test_main.cpp;tests/test_future.cpp;tests/test_fnc.cpp;tests/test_data.cpp;tests/test_worker.cpp;tests/test_id.cpp;tests/test_ring.cpp;tests/test_comm.cpp;tests/test_ref_counting.cpp"
+        "tests/test_main.cpp;tests/test_future.cpp;tests/test_future2.cpp;tests/test_fnc.cpp;tests/test_data.cpp;tests/test_worker.cpp;tests/test_id.cpp;tests/test_ring.cpp;tests/test_comm.cpp;tests/test_ref_counting.cpp"
     )
 
     enable_testing()
@@ -151,24 +151,24 @@ macro(taskloaf_example name filename)
         ${CMAKE_THREAD_LIBS_INIT})
 endmacro()
 
-if (BUILD_EXAMPLES)
-    taskloaf_example(totient examples/totient.cpp)
-    taskloaf_example(dot_product examples/dot_product.cpp)
-    taskloaf_example(diffusion examples/diffusion.cpp)
-    taskloaf_example(readme examples/readme.cpp)
-    
-    find_package(BLAS)
-    find_package(LAPACK)
-    if (BLAS_FOUND AND LAPACK_FOUND)
-        taskloaf_example(cholesky examples/cholesky.cpp)
-        target_link_libraries(cholesky 
-            ${BLAS_LIBRARIES}
-            ${LAPACK_LIBRARIES}
-            ${CMAKE_THREAD_LIBS_INIT}
-            )
-    endif()
-
-    if (MPI_CXX_FOUND)
-        taskloaf_example(fibmpi examples/fibmpi.cpp)
-    endif()
-endif(BUILD_EXAMPLES)
+#if (BUILD_EXAMPLES)
+#    taskloaf_example(totient examples/totient.cpp)
+#    taskloaf_example(dot_product examples/dot_product.cpp)
+#    taskloaf_example(diffusion examples/diffusion.cpp)
+#    taskloaf_example(readme examples/readme.cpp)
+#    
+#    find_package(BLAS)
+#    find_package(LAPACK)
+#    if (BLAS_FOUND AND LAPACK_FOUND)
+#        taskloaf_example(cholesky examples/cholesky.cpp)
+#        target_link_libraries(cholesky 
+#            ${BLAS_LIBRARIES}
+#            ${LAPACK_LIBRARIES}
+#            ${CMAKE_THREAD_LIBS_INIT}
+#            )
+#    endif()
+#
+#    if (MPI_CXX_FOUND)
+#        taskloaf_example(fibmpi examples/fibmpi.cpp)
+#    endif()
+#endif(BUILD_EXAMPLES)
