Future local->global transitioning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,24 +151,24 @@ macro(taskloaf_example name filename)
         ${CMAKE_THREAD_LIBS_INIT})
 endmacro()
 
-#if (BUILD_EXAMPLES)
-#    taskloaf_example(totient examples/totient.cpp)
-#    taskloaf_example(dot_product examples/dot_product.cpp)
-#    taskloaf_example(diffusion examples/diffusion.cpp)
-#    taskloaf_example(readme examples/readme.cpp)
-#    
-#    find_package(BLAS)
-#    find_package(LAPACK)
-#    if (BLAS_FOUND AND LAPACK_FOUND)
-#        taskloaf_example(cholesky examples/cholesky.cpp)
-#        target_link_libraries(cholesky 
-#            ${BLAS_LIBRARIES}
-#            ${LAPACK_LIBRARIES}
-#            ${CMAKE_THREAD_LIBS_INIT}
-#            )
-#    endif()
-#
-#    if (MPI_CXX_FOUND)
-#        taskloaf_example(fibmpi examples/fibmpi.cpp)
-#    endif()
-#endif(BUILD_EXAMPLES)
+if (BUILD_EXAMPLES)
+    taskloaf_example(totient examples/totient.cpp)
+    taskloaf_example(dot_product examples/dot_product.cpp)
+    taskloaf_example(diffusion examples/diffusion.cpp)
+    taskloaf_example(readme examples/readme.cpp)
+    
+    find_package(BLAS)
+    find_package(LAPACK)
+    if (BLAS_FOUND AND LAPACK_FOUND)
+        taskloaf_example(cholesky examples/cholesky.cpp)
+        target_link_libraries(cholesky 
+            ${BLAS_LIBRARIES}
+            ${LAPACK_LIBRARIES}
+            ${CMAKE_THREAD_LIBS_INIT}
+            )
+    endif()
+
+    if (MPI_CXX_FOUND)
+        taskloaf_example(fibmpi examples/fibmpi.cpp)
+    endif()
+endif(BUILD_EXAMPLES)
