Playing with rvaluerefs, threads, fixed up compile system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ macro(taskloaf_tests name ADDTEST)
     if (${ADDTEST}) 
         add_test(${name} ${name})
     endif()
+    add_dependencies(tests ${name})
 endmacro()
 
 if(BUILD_TESTS)
@@ -112,6 +113,7 @@ if(BUILD_TESTS)
     target_include_directories(test_runner PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib)
     enable_testing()
 
+    add_custom_target(tests)
     taskloaf_tests(future True)
     taskloaf_tests(empty_futures True)
     taskloaf_tests(fnc True)
@@ -171,24 +173,24 @@ macro(taskloaf_example name filename)
         ${CMAKE_THREAD_LIBS_INIT})
 endmacro()
 
-#if (BUILD_EXAMPLES)
-#    taskloaf_example(totient examples/totient.cpp)
-#    taskloaf_example(dot_product examples/dot_product.cpp)
-#    taskloaf_example(diffusion examples/diffusion.cpp)
-#    taskloaf_example(readme examples/readme.cpp)
-#    
-#    find_package(BLAS)
-#    find_package(LAPACK)
-#    if (BLAS_FOUND AND LAPACK_FOUND)
-#        taskloaf_example(cholesky examples/cholesky.cpp)
-#        target_link_libraries(cholesky 
-#            ${BLAS_LIBRARIES}
-#            ${LAPACK_LIBRARIES}
-#            ${CMAKE_THREAD_LIBS_INIT}
-#            )
-#    endif()
-#
-#    if (MPI_CXX_FOUND)
-#        taskloaf_example(fibmpi examples/fibmpi.cpp)
-#    endif()
-#endif(BUILD_EXAMPLES)
+if (BUILD_EXAMPLES)
+    taskloaf_example(totient examples/totient.cpp)
+    taskloaf_example(dot_product examples/dot_product.cpp)
+    taskloaf_example(diffusion examples/diffusion.cpp)
+    taskloaf_example(readme examples/readme.cpp)
+    
+    find_package(BLAS)
+    find_package(LAPACK)
+    if (BLAS_FOUND AND LAPACK_FOUND)
+        taskloaf_example(cholesky examples/cholesky.cpp)
+        target_link_libraries(cholesky 
+            ${BLAS_LIBRARIES}
+            ${LAPACK_LIBRARIES}
+            ${CMAKE_THREAD_LIBS_INIT}
+            )
+    endif()
+
+    if (MPI_CXX_FOUND)
+        taskloaf_example(fibmpi examples/fibmpi.cpp)
+    endif()
+endif(BUILD_EXAMPLES)
