Non-controlling launch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,10 +123,9 @@ if(BUILD_TESTS)
     taskloaf_tests(ring True)
     taskloaf_tests(comm True)
     taskloaf_tests(ref_counting True)
-    taskloaf_tests(free_launch True)
-    taskloaf_tests(thread True)
     taskloaf_tests(promotion True)
     taskloaf_tests(future_ownership True)
+    taskloaf_tests(launch True)
 
     if (MPI_CXX_FOUND)
         taskloaf_tests(mpi False)
