Working on local tasks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,8 @@ if(BUILD_TESTS)
     taskloaf_tests(promotion True)
     taskloaf_tests(future_ownership True)
     taskloaf_tests(launch True)
+    taskloaf_tests(ivar True)
+    taskloaf_tests(task_collection True)
 
     if (MPI_CXX_FOUND)
         taskloaf_tests(mpi False)
@@ -183,6 +185,7 @@ if (BUILD_EXAMPLES)
     taskloaf_example(dot_product examples/dot_product.cpp)
     taskloaf_example(diffusion examples/diffusion.cpp)
     taskloaf_example(readme examples/readme.cpp)
+    taskloaf_example(fib_local examples/fib_local.cpp)
     
     find_package(BLAS)
     find_package(LAPACK)
