--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,8 +120,8 @@ if(BUILD_TESTS)
     enable_testing()
 
     add_custom_target(tests)
+    taskloaf_tests(task_locations True)
     taskloaf_tests(future True)
-    taskloaf_tests(empty_futures True)
     taskloaf_tests(fnc True)
     taskloaf_tests(data True)
     taskloaf_tests(worker True)
@@ -129,8 +129,6 @@ if(BUILD_TESTS)
     taskloaf_tests(ring True)
     taskloaf_tests(comm True)
     taskloaf_tests(ref_counting True)
-    taskloaf_tests(promotion True)
-    taskloaf_tests(future_ownership True)
     taskloaf_tests(launch True)
     taskloaf_tests(ivar True)
     taskloaf_tests(task_collection True)
@@ -186,6 +184,7 @@ if (BUILD_EXAMPLES)
     taskloaf_example(diffusion examples/diffusion.cpp)
     taskloaf_example(readme examples/readme.cpp)
     taskloaf_example(fib_local examples/fib_local.cpp)
+    taskloaf_example(streams examples/streams.cpp)
     
     find_package(BLAS)
     find_package(LAPACK)
