Multiple return values. Cool.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,7 @@ if(BUILD_TESTS)
     add_custom_target(tests)
     taskloaf_tests(task_locations True)
     taskloaf_tests(future True)
+    taskloaf_tests(future2 True)
     taskloaf_tests(fnc True)
     taskloaf_tests(data True)
     taskloaf_tests(worker True)
